# qemuctl

./: .gitignore  Makefile  Qemufile  Qemufile.sample  README.md  pyqemu.py  setup.cfg  setup.py
qemu/: __main__.py  api.py  cli.py  dnsmasq.py  hypervisor.py  hypervisor_ssh.py  images.py  models.py  networks.py  qmp.py  qmp_ssh.py  specs.py  ssh.py  utils.py  vms.py
qemu/cli/: __init__.py  images.py  networks.py  system.py  utils.py  vms.py
tests/: test_hypervisor.py  test_networks.py  test_qmp.py  test_specs_dnsmasq.py  test_specs_network.py  test_specs_qemuopt.py  test_specs_vm.py
