[metadata]
name = qemuctl
version = attr: qemu.__version__
url = https://github.com/nrocco
description = A command line tool to manage qemu images
long_description = file: README.md
author = Nico Di Rocco
author_email = dirocco.nico@gmail.com
platform = any
keywords = kvm, qemu, hypervisor, vm, virtualmachine
license = Private
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires =
    setuptools
    wheel
install_requires =
    click
    flask
    requests

[options.extras_require]
develop =
    flake8
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    qemuctl = qemu.cli:cli

[options.packages.find]
exclude = tests

[bumpversion]
commit = True
current_version = 0.0.1
tag = True
tag_name = {new_version}

[bumpversion:file:qemu/__init__.py]

[wheel]
universal = true

[flake8]
ignore = E501,C901
exclude = .git,.eggs,__pycache__,build,dist,env
max-complexity = 12
max-line-length = 1000
